--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Affichage PDF depuis Google Drive</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Affichage PDF</title>
 </head>
 <body>
-    <iframe src="https://drive.google.com/file/d/1O_b5uzfSoGQMJkoayPIqfOAlk5sfWeKv/view?usp=sharing" width="100%" height="600px"></iframe>
+  <h1>Affichage PDF</h1>
+  <div id="pdf-container">
+    <iframe id="pdf-iframe" src="" frameborder="0"></iframe>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
